# hci-alt-texts-exploration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
models/semantic_level_classifier/: prep_data.py  rf_classifier.py  scibert_classifier.py
notebooks/: hci-alt-text-analysis.ipynb
utils/: create_spreadsheet.py  s3_image_uploader.py
