[project]
name = "hci-alt-texts-exploration"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.34",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "pre-commit>=4.6.0",
]
notebooks = [
    "jupyterlab>=4.6.0",
]
